fixed css transition shifting

--- a/app/assets/stylesheets/pins/pin_modal.scss
+++ b/app/assets/stylesheets/pins/pin_modal.scss
@@ -152,6 +152,7 @@
   min-width: 90%;
   height: 75vh;
   width: 100%;
+  max-width: 600px;
 }
 
 .pin-show-modal-content-container::-webkit-scrollbar {
