--- a/app/assets/stylesheets/session/login_modal.scss
+++ b/app/assets/stylesheets/session/login_modal.scss
@@ -18,7 +18,7 @@
   border: 2px solid $color-primary;
   border-radius: 8px;
   background-color: $white;
-  padding: 35px 40px 50px 40px;
+  padding: 35px 50px 50px 50px;
   overflow-y: scroll;
   min-width: 450px;
 }
